content/v1.4.5/zh/api/campaign/TradeAgreementsCampaignBehavior.md
---
title: "TradeAgreementsCampaignBehavior"
description: "TradeAgreementsCampaignBehavior 的自动生成类参考。"
---
# TradeAgreementsCampaignBehavior

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class TradeAgreementsCampaignBehavior : CampaignBehaviorBase, ITradeAgreementsCampaignBehavior`
**Base:** `CampaignBehaviorBase`
**File:** `bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem.CampaignBehaviors/TradeAgreementsCampaignBehavior.cs`

## 概述

`TradeAgreementsCampaignBehavior` 位于 `TaleWorlds.CampaignSystem.CampaignBehaviors`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.CampaignSystem.CampaignBehaviors` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要方法

### AddGainedGoldToKingdom
`public TradeAgreement AddGainedGoldToKingdom(Kingdom kingdom, int gold)`

**用途 / Purpose:** **用途 / Purpose:** 将 gained gold to kingdom 添加到当前容器或状态中。

```csharp
// 先通过子系统 API 拿到 TradeAgreementsCampaignBehavior 实例
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
var result = tradeAgreementsCampaignBehavior.AddGainedGoldToKingdom(kingdom, 0);
```

### OnGoldSharedInKingdom
`public TradeAgreement OnGoldSharedInKingdom(Kingdom kingdom, int gold)`

**用途 / Purpose:** **用途 / Purpose:** 在 gold shared in kingdom 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 TradeAgreementsCampaignBehavior 实例
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
var result = tradeAgreementsCampaignBehavior.OnGoldSharedInKingdom(kingdom, 0);
```

### AutoGeneratedStaticCollectObjectsTradeAgreement
`public static void AutoGeneratedStaticCollectObjectsTradeAgreement(object o, List<object> collectedObjects)`

**用途 / Purpose:** **用途 / Purpose:** 调用 AutoGeneratedStaticCollectObjectsTradeAgreement 对应的操作。

```csharp
// 静态调用，不需要实例
TradeAgreementsCampaignBehavior.AutoGeneratedStaticCollectObjectsTradeAgreement(o, collectedObjects);
```

### RegisterEvents
`public override void RegisterEvents()`

**用途 / Purpose:** **用途 / Purpose:** 将events注册到当前系统，以便后续监听或分发。

```csharp
// 先通过子系统 API 拿到 TradeAgreementsCampaignBehavior 实例
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.RegisterEvents();
```

### OnTradeAgreementOfferedToPlayer
`public void OnTradeAgreementOfferedToPlayer(Kingdom fromKingdom)`

**用途 / Purpose:** **用途 / Purpose:** 在 trade agreement offered to player 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 TradeAgreementsCampaignBehavior 实例
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.OnTradeAgreementOfferedToPlayer(fromKingdom);
```

### SyncData
`public override void SyncData(IDataStore dataStore)`

**用途 / Purpose:** **用途 / Purpose:** 将data同步到相关上下文或系统中。

```csharp
// 先通过子系统 API 拿到 TradeAgreementsCampaignBehavior 实例
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.SyncData(dataStore);
```

### MakeTradeAgreement
`public void MakeTradeAgreement(Kingdom kingdom1, Kingdom kingdom2, CampaignTime duration)`

**用途 / Purpose:** **用途 / Purpose:** 调用 MakeTradeAgreement 对应的操作。

```csharp
// 先通过子系统 API 拿到 TradeAgreementsCampaignBehavior 实例
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.MakeTradeAgreement(kingdom1, kingdom2, duration);
```

### EndTradeAgreementsOfKingdom
`public void EndTradeAgreementsOfKingdom(Kingdom kingdom)`

**用途 / Purpose:** **用途 / Purpose:** 调用 EndTradeAgreementsOfKingdom 对应的操作。

```csharp
// 先通过子系统 API 拿到 TradeAgreementsCampaignBehavior 实例
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.EndTradeAgreementsOfKingdom(kingdom);
```

### EndTradeAgreement
`public void EndTradeAgreement(Kingdom kingdom1, Kingdom kingdom2)`

**用途 / Purpose:** **用途 / Purpose:** 调用 EndTradeAgreement 对应的操作。

```csharp
// 先通过子系统 API 拿到 TradeAgreementsCampaignBehavior 实例
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.EndTradeAgreement(kingdom1, kingdom2);
```

### HasTradeAgreement
`public bool HasTradeAgreement(Kingdom kingdom1, Kingdom kingdom2, out TradeAgreement tradeAgreement)`

**用途 / Purpose:** **用途 / Purpose:** 判断当前对象是否已经持有 trade agreement。

```csharp
// 先通过子系统 API 拿到 TradeAgreementsCampaignBehavior 实例
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
var result = tradeAgreementsCampaignBehavior.HasTradeAgreement(kingdom1, kingdom2, tradeAgreement);
```

### GetTradeAgreementEndDate
`public CampaignTime GetTradeAgreementEndDate(Kingdom kingdom1, Kingdom kingdom2)`

**用途 / Purpose:** **用途 / Purpose:** 读取并返回当前对象中 trade agreement end date 的结果。

```csharp
// 先通过子系统 API 拿到 TradeAgreementsCampaignBehavior 实例
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
var result = tradeAgreementsCampaignBehavior.GetTradeAgreementEndDate(kingdom1, kingdom2);
```

### OnTradeGoldDistributedInKingdom
`public void OnTradeGoldDistributedInKingdom(Kingdom kingdom1, Kingdom kingdom2, Clan clan, int share)`

**用途 / Purpose:** **用途 / Purpose:** 在 trade gold distributed in kingdom 事件触发时调用此回调。

```csharp
// 先通过子系统 API 拿到 TradeAgreementsCampaignBehavior 实例
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.OnTradeGoldDistributedInKingdom(kingdom1, kingdom2, clan, 0);
```

## 使用示例

```csharp
// 通常从对应子系统 API 获取实例后调用
TradeAgreementsCampaignBehavior tradeAgreementsCampaignBehavior = ...;
tradeAgreementsCampaignBehavior.AddGainedGoldToKingdom(kingdom, 0);
```

## 参见

- [本区域目录](../)